--- a/about setion.html
+++ b/about setion.html
@@ -78,5 +78,56 @@ And just like Elias, she watched the world with eyes that remembered.
             </div>
          </div>
     </div>
+
+    <br><br>
+    <div class="container" id="project">
+        <h4 class="text-light">my project</h4>
+        <div class="row">
+
+            <div class="col-3">
+                <div class="card" style="width:300px ;">
+                    <img src="realistic eye drawing by ram.jpg" class="card-img-top " style="height:300px">
+                    <div class="card-body">
+                        <h3 class="card-title">Google</h3>
+                        <p class="card-text">
+                            I am using Google for me best search options...</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card" style="width:300px ;">
+                    <img src="realistic eye drawing by ram.jpg" class="card-img-top " style="height:300px">
+                    <div class="card-body">
+                        <h3 class="card-title">Google</h3>
+                        <p class="card-text">
+                            I am using Google for me best search options...</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card" style="width:300px ;">
+                    <img src="realistic eye drawing by ram.jpg" class="card-img-top " style="height:300px">
+                    <div class="card-body">
+                        <h3 class="card-title">Google</h3>
+                        <p class="card-text">
+                            I am using Google for me best search options...</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card" style="width:300px ;">
+                    <img src="realistic eye drawing by ram.jpg" class="card-img-top " style="height:300px">
+                    <div class="card-body">
+                        <h3 class="card-title">Google</h3>
+                        <p class="card-text">
+                            I am using Google for me best search options...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
